--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
 body{
     font-family: 'Barlow Semi Condensed', sans-serif;
     background-color: hsl(210, 46%, 95%);
+    width: 100%;
+    height: 100vh;
     justify-content: center;
     align-items: center;
     display: flex;
