--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@ body{
     font-family: 'Barlow Semi Condensed', sans-serif;
     background-color: hsl(210, 46%, 95%);
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     justify-content: center;
     align-items: center;
     display: flex;
